--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@lordicon/react": "^1.4.1",
     "framer-motion": "^10.17.12",
+    "lottie-web": "^5.12.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
