--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lottie-web": "^5.12.2",
     "next": "14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.1",
